--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,600&display=swap');
+@import url('/assets/fonts/Geologica-Regular.ttf');
+
+@font-face {
+    font-family:Geologica;
+    src:url('/assets/fonts/Geologica-Regular.ttf')
+}
+
 :root{
-    --accent:#00ffff;
+    --accent:#ddddeb;
+    --default:rgba(0,0,0,0.3);
 }
 html{
     margin:0;
@@ -8,7 +15,7 @@ html{
     box-sizing:border-box;
 }
 body {
-    font-family: 'Nunito', sans-serif;
+    font:20px/1.5 Geologica1 ;
     background-color:var(--accent);
     width:100hv;
 }
@@ -33,13 +40,23 @@ body {
     
 }
 .todo__new{
-    display:flex;  
-    flex-direction:row;
+    --size:25px;
+    display:flex;
     padding: 1rem   2rem;
 }
 .todo__new input{
-    padding: 8px;
+    padding: 8px 16px;
     margin-right:16px;
+    font-size:15px;
+    height:var(--size);
+    border:1px solid var(--default);
 }
 
-.todo__add{}
+.todo__add{
+    width: 25px;
+    height: 25px;
+    line-height:calc(var(--size)*1.5);
+    text-align:center;
+    border:1px solid var(--default);
+    border-radius:var(--size);
+}
